--- a/promise/package.json
+++ b/promise/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^5.3.1",
+    "nodemon": "^2.0.7",
     "webpack": "^5.38.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2"
