--- a/part2/auto-generator/gulp/gulp-case/package.json
+++ b/part2/auto-generator/gulp/gulp-case/package.json
@@ -6,12 +6,19 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
+    "browser-sync": "^2.26.7",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-load-plugins": "^2.0.7",
     "gulp-sass": "4",
-    "gulp-swig": "^0.9.1"
+    "gulp-swig": "^0.9.1",
+    "gulp-useref": "^5.0.0"
+  },
+  "dependencies": {
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   }
 }
