--- a/part3/custome-component/package.json
+++ b/part3/custome-component/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "main": "index.js",
   "dependencies": {
+    "async-validator": "^4.0.7",
     "element-ui": "^2.4.5"
   },
   "devDependencies": {
