--- a/part3/lg-element/packages/input/package.json
+++ b/part3/lg-element/packages/input/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lg-button",
+  "name": "lg-input",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "lodash": "3"
+  }
 }
